Fix issue with scale not setting on blurred image in chrome

--- a/web/styles/Landing.module.css
+++ b/web/styles/Landing.module.css
@@ -13,7 +13,7 @@
   width: 100vw;
   height: 100vh;
   filter: brightness(0.2) blur(15px);
-  scale: 1.75;
+  transform: scale(1.75);
   background-size: cover;
   z-index: -100;
 }
